--- a/FOSseq_GUI/README
+++ b/FOSseq_GUI/README
@@ -2,6 +2,14 @@ GUI 개발 코드입니다.
 .py 파일 같은 폴더 안에 넣고
 GUI.py를 실행하면 현재까지 진행 상황 알 수 있습니다.
 
-== 현재까지
+== 07-17
 아직 multiple choice에 대한 부분 구현 X
 directory 여러 개 선택하고 실행하면 에러 뜨는 게 정상입니다.
+
+== 07-18
+directory 여러 개 선택 가능
+단, 다운받지 않은 파일에 대해 알려주는 기능 X
+프로그램이 돌아가고 있지만, 화면 상에선 멈춘 것으로 보임.
+추천: 이미 다운받아놓은 파일에 대해 data collection 실행하기
+다운로드 경로는 abc_download_root 와 같은 폴더 선택하면 됩니다.
+경고: 많은 수의 gene에 대해서 시도해보지 않았기 때문에 작은 수부터 해보는 걸 추천
