--- a/FOSseq_GUI/README
+++ b/FOSseq_GUI/README
@@ -13,3 +13,6 @@ directory 여러 개 선택 가능
 추천: 이미 다운받아놓은 파일에 대해 data collection 실행하기
 다운로드 경로는 abc_download_root 와 같은 폴더 선택하면 됩니다.
 경고: 많은 수의 gene에 대해서 시도해보지 않았기 때문에 작은 수부터 해보는 걸 추천
+
+== 07-26
+cancel 버튼 삭제중..
