--- a/FOSseq_GUI/README
+++ b/FOSseq_GUI/README
@@ -15,4 +15,47 @@ directory 여러 개 선택 가능
 경고: 많은 수의 gene에 대해서 시도해보지 않았기 때문에 작은 수부터 해보는 걸 추천
 
 == 07-26
-cancel 버튼 삭제중..
+version 1.0
+
+**시작하기 전에**
+ABC Atlas에서 다운받은 용량이 큰 데이터를 사용하기 때문에
+미리 ABC Atlas를 참고해 관련 데이터를 다운받는 것을 권장합니다.
+Link: https://alleninstitute.github.io/abc_atlas_access/notebooks/10x_snRNASeq_tutorial_part_1.html
+
+다운받지 않고 그냥 프로그램 동작을 보고싶은 거라면,
+예시 csv 파일을 제공하고 있습니다.
+example 폴더 확인
+
+[사용법]
+(1) ABC atlas download root 설정
+- ABC atlas jupyter notebook에서 사용했던 파일경로
+
+(2) 10X RNA seq data collection
+  1) 직접 실행해 데이터 얻기
+  - 데이터 파일 선택 (많을수록 n 증가, but 용량 매우 큼)
+  - 권장: ABC atlas jupyter에서 미리 다운받은 파일 활용 ***
+  - gene range 선택 후 Execute
+  - 결과 생성 후 save 가능
+  2) csv 파일 로드하기
+  - 이전에 실행해 얻은 데이터 파일 불러오기
+  - ex) rna_seq_0_to_100_10Xv2TH.csv
+  - 같은 이름의 txt 파일이 있으면 같이 불러옴 (옵션 내용 저장)
+  => 완료되면 우측 상단에 READY 표시됨
+
+(3) cFOS grouping
+  1) 직접 실행해 데이터 얻기
+  - JSON 파일 열기 (QUINT workflow를 통해 얻은 좌표 데이터, user cell 좌표)
+  - 비교할 region 선택 (JSON 파일 좌표가 포함되어 있는 영역)
+  - radius 설정 (user cell 좌표와 MERFISH 데이터를 비교할 때의 기준이 됨)
+  - ex) radius = 25um --> user cell 반경 25 um 이내의 MERFISH cell들이 cFOS (+) cel이 됨
+  2) csv 파일 로드하기
+  - 파일 조건:
+  - cFOS(+) cell 파일 이름은 '_cfos_o.csv' 로 끝나야 하고,
+  - cFOS(-) cell 파일 이름은 '_cfos_x.csv' 로 끝나야 함
+  - 파일을 열 때는 둘 중 하나만 열되, 이름의 앞부분이 동일해야함
+  => 완료되면 우측 상단에 READY 표시됨
+
+(4) t-test
+  1) 모두 READY면 execute 누르기
+  t-test 결과 저장 기능 구현중..
+  
